syntax = "proto3";

import "google/protobuf/empty.proto";
import "locations.proto";
import "couriers.proto";

package protobuf;

option go_package = "github.com/mproyyan/goparcel/internal/common/genproto";

service UserService {
    // User authentication
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc RegisterAsOperator(RegisterAsOperatorRequest) returns (google.protobuf.Empty) {}
    rpc RegisterAsCarrier(RegisterAsCarrierRequest) returns (google.protobuf.Empty) {}
    rpc RegisterAsCourier(RegisterAsCourierRequest) returns (google.protobuf.Empty) {}

    // Retrieve users
    rpc GetUser(GetUserRequest) returns (User) {}
    rpc GetUsers(GetUsersRequest) returns (UserResponse) {}
    rpc GetOperators(GetOperatorsRequest) returns (OperatorResponse) {}
    rpc GetCouriers(GetCouriersRequest) returns (CourierResponse) {}
    rpc GetCarriers(GetCarriersRequest) returns (CarrierResponse) {}
}

// Login
message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

// RegisterAsOperator
message RegisterAsOperatorRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    string location = 4;
    string type = 5;
}

// RegisterAsCourier
message RegisterAsCourierRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    string location = 4;
}

// RegisterAsCarrier
message RegisterAsCarrierRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    string location = 4;
}

message User {
    string id = 1;
    string model_id = 2;
    string entity = 3;
}

message GetUserRequest {
    string id = 1;
}

message GetUsersRequest {
    repeated string id = 1;
}

message UserResponse {
    repeated User users = 1;
}

message Operator {
    string id = 1;
    string user_id = 2;
    string type = 3;
    string name = 4;
    string email = 5;
    string location_id = 6;
}

message OperatorResponse {
    repeated Operator operators = 1;
}

message GetOperatorsRequest {
    repeated string ids = 1;
}

message GetCouriersRequest {
    repeated string ids = 1;
}

message CarrierResponse {
    repeated Carrier carriers = 1;
}

message Carrier {
    string id = 1;         
	string user_id = 2; 
	string name = 3;      
	string email = 4; 
	string status = 5;
	string location_id = 6;
    string cargo_id = 7;
}

message GetCarriersRequest {
    repeated string ids = 1;
}